--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<artifactId>fis-rest-1</artifactId>
 	<version>1.0</version>
 
-	<name>Fuse Integration Services - Vodafone Sample 1</name>
+	<name>Fuse Integration Services - UAEX Sample 1</name>
 	<description>Vodafone Sample for Fuse Integration Services</description>
 
 	<properties>
@@ -21,7 +21,7 @@
 		<!-- configure the versions you want to use here -->
 		<fabric8.version>2.2.170.redhat-000023</fabric8.version>
 		<spring-boot.version>1.3.3.RELEASE</spring-boot.version>
-		<infinispan.version>8.4.2.Final-redhat-1</infinispan.version>
+		<infinispan.version>8.2.4.Final</infinispan.version>
 
 		<!-- maven plugin versions -->
 		<fabric8.maven.plugin.version>3.1.80.redhat-000023</fabric8.maven.plugin.version>
@@ -81,19 +81,21 @@
 		<!-- infinispan & JDG -->
 		<dependency>
 			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-infinispan</artifactId>
+			<artifactId>camel-infinispan-starter</artifactId>
 		</dependency>
 
-		<dependency>
+
+		<!-- <dependency>
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-core</artifactId>
 			<version>${infinispan.version}</version>
 		</dependency>
+		
 		<dependency>
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-query-dsl</artifactId>
 			<version>${infinispan.version}</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.infinispan</groupId>
 			<artifactId>infinispan-remote</artifactId>
@@ -140,16 +142,9 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</repository>
-		<!-- <repository>
-			<id>jboss-earlyaccess-repository</id>
-			<url>http://maven.repository.redhat.com/earlyaccess/all/</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository> -->
+		<!-- <repository> <id>jboss-earlyaccess-repository</id> <url>http://maven.repository.redhat.com/earlyaccess/all/</url> 
+			<releases> <enabled>true</enabled> </releases> <snapshots> <enabled>false</enabled> 
+			</snapshots> </repository> -->
 	</repositories>
 
 	<pluginRepositories>
@@ -163,16 +158,9 @@
 				<enabled>false</enabled>
 			</snapshots>
 		</pluginRepository>
-		<!-- <pluginRepository>
-			<id>jboss-earlyaccess-repository-plugin</id>
-			<url>http://maven.repository.redhat.com/earlyaccess/all</url>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</pluginRepository> -->
+		<!-- <pluginRepository> <id>jboss-earlyaccess-repository-plugin</id> <url>http://maven.repository.redhat.com/earlyaccess/all</url> 
+			<releases> <enabled>true</enabled> </releases> <snapshots> <enabled>false</enabled> 
+			</snapshots> </pluginRepository> -->
 	</pluginRepositories>
 	<build>
 		<defaultGoal>spring-boot:run</defaultGoal>
