--- a/src/main/fabric8/deployment.yml
+++ b/src/main/fabric8/deployment.yml
@@ -21,7 +21,7 @@ spec:
             value: 11333
           - name: JDG_CACHE_NAME
             value: payees
-          - name: JDGL_SERVICE_USERNAME
+          - name: JDG_SERVICE_USERNAME
             value: admin
           - name: JDG_SERVICE_PASSWORD
             value: redhat1!
