--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,7 +20,7 @@ infinispan:
   host: ${JDG_SERVICE_NAME}
   port: ${JDG_SERVICE_PORT}
   cache-name: ${JDG_CACHE_NAME}
-  username: ${JDGL_SERVICE_USERNAME}
+  username: ${JDG_SERVICE_USERNAME}
   password: ${JDG_SERVICE_PASSWORD}
 
 # The application configuration properties
